# ChangeLog for dev-php/PEAR-File_Find
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-File_Find/ChangeLog,v 1.39 2015/05/08 08:32:47 ago Exp $

  08 May 2015; Agostino Sarubbo <ago@gentoo.org> PEAR-File_Find-1.3.2.ebuild:
  Stable for alpha/amd64/ia64/ppc/sparc/x86, wrt bug #548614

  05 May 2015; Jeroen Roovers <jer@gentoo.org> PEAR-File_Find-1.3.2.ebuild:
  Stable for PPC64 (bug #548614).

  05 May 2015; Jeroen Roovers <jer@gentoo.org> PEAR-File_Find-1.3.2.ebuild:
  Stable for HPPA (bug #548614).

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  PEAR-File_Find-1.3.0.ebuild, PEAR-File_Find-1.3.2.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  27 Nov 2013; Matti Bickel <mabi@gentoo.org> PEAR-File_Find-1.3.2.ebuild:
  force unpack despite lone zero block (bug #476542)

*PEAR-File_Find-1.3.2 (03 Jul 2013)

  03 Jul 2013; Matti Bickel <mabi@gentoo.org> +PEAR-File_Find-1.3.2.ebuild:
  version bump

  26 Dec 2007; Christian Heim <phreak@gentoo.org>
  -files/digest-PEAR-File_Find-1.2.0:
  Cleaning out unused digest files.

  05 Dec 2007; Markus Ullmann <jokey@gentoo.org>
  -PEAR-File_Find-1.2.0.ebuild, PEAR-File_Find-1.3.0.ebuild:
  LICENSE fix from project overlay

  02 Dec 2007; Jakub Moc <jakub@gentoo.org>
  PEAR-File_Find-1.3.0.ebuild:
  Fix LICENSE

  22 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  PEAR-File_Find-1.3.0.ebuild:
  ia64 stable wrt #192247

  05 Oct 2007; Raúl Porcel <armin76@gentoo.org>
  PEAR-File_Find-1.3.0.ebuild:
  alpha/sparc stable wrt #192247

  28 Sep 2007; Christoph Mende <angelos@gentoo.org>
  PEAR-File_Find-1.3.0.ebuild:
  Stable on amd64 wrt bug #192247

  26 Sep 2007; Brent Baude <ranger@gentoo.org> PEAR-File_Find-1.3.0.ebuild:
  Marking PEAR-File_Find-1.3.0 ppc64 stable for bug 192247

  25 Sep 2007; Lars Weiler <pylon@gentoo.org> PEAR-File_Find-1.3.0.ebuild:
  stable ppc, bug #192247

  21 Sep 2007; Christian Faulhammer <opfer@gentoo.org>