@@ -1,11 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-File_Find/PEAR-File_Find-1.3.0.ebuild,v 1.10 2014/08/10 20:46:39 slyfox Exp $
-
-inherit php-pear-r1
-
-DESCRIPTION="A class that facillitates the search of filesystems"
-LICENSE="PHP-2.02"
-SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 ppc ppc64 sparc x86"
-IUSE=""
