@@ -1,11 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Net_CheckIP/PEAR-Net_CheckIP-1.2.1.ebuild,v 1.9 2014/08/10 20:51:47 slyfox Exp $
-
-inherit php-pear-r1
-
-DESCRIPTION="Check the syntax of IPv4 addresses"
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="alpha amd64 hppa ia64 ppc ppc64 sparc x86"
-IUSE=""
