@@ -1,26 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST Net_DNSBL-1.3.6.tgz 8521 SHA256 d3ce3a6f88e21f21665705678a2bf3aac6726a1bda81f6dcbdf7601c8a420983 SHA512 7b585791ef5959dc6b1d167e2ab19cefb0e54259286523f809b8db985352d1f7b52a0ac1ae2a08df72bffc56838d06591a76129ea9bd151bf8f205a441bf4c90 WHIRLPOOL 997d69dfc1926b9339e4c9ac4a2b243f7a24189e3acf244e0dcd4e9d14ed9455b2b7c94ac616fe628bb81f0c1d4a8875f166e936b09e6f669b5893293194c7ae
 DIST Net_DNSBL-1.3.7.tgz 8125 SHA256 6a9a468e291103143ba51c3c2b75f5fc017af528a411ede6fbce9b1d0d09c566 SHA512 6591b81e5e4b98092daea3e27993099028581052a7907b79b4231d549b4d9aaa6fddbd53fd8bfe9734ae41fc85c46f2fc17e5ce50e8303fa5c166dd4b3062ea0 WHIRLPOOL 766659e3c39e22331f72a4bbbfad16e624bab425d418f5f2e94d50c6fe626719c57f674405d9e05ce9b8ed56dd8a35bbd816b8eb250daf6b4bdaf410b80f3fc0
-EBUILD PEAR-Net_DNSBL-1.3.6.ebuild 509 SHA256 8253e9ad68688eae5dd3031f97e58eabf487845353c76cc2fd2f4781470a481e SHA512 8eadf0952b479482db4e9b131ebec1b09aca233c9a53fe6642b5b21eb4e6ba7acccfbd6c6c11dd5ef427d9020c46145e03685131c52fce92af450e59498ae06e WHIRLPOOL efce48aec278ebb6c686ed5c948f486f8458174848e6b1318dc367a0102c7d32a44d756eb64a69737ab58e11ea632c3a4fb3cbc060d60ae52d518678f49a9cb3
 EBUILD PEAR-Net_DNSBL-1.3.7.ebuild 513 SHA256 e47d93323de433ec1e5df1f0b7600da2282948c870f2eeb2d868f499c2b3f64c SHA512 06b5c0bbcdc91a07ea6ea1b416856e97b36e254e0bec830c888714d1e4771ce0984e2497e45c7910b4334e919db6efc5c56f7bdbddd5b7da03f54d6a944cacc1 WHIRLPOOL 6ba7c8dd543182d844caabd28ed119fe5d3d1a3229a8ed9e6bf8456f97003f68e593d9858d7e752cbf052aa6ab6f418e1ff06f10d18aec15ebc2b5973d6b6a8f
-MISC ChangeLog 5033 SHA256 804fe2b41d910f587073f96d2c29ee28c7895aeeee63525ba4a950917ad6a610 SHA512 38ed0a9b4785df043dcc05ff7ee75011dd39ffc0a7bd4da11cb9fca1a930c6d7a96ce27b34453c74ee4b82b6521eff536ee6bdc97dedd9ed6961cb56ad921199 WHIRLPOOL 1c7ac657c7177fda4a87512f2792233943661e8302958fca1a643ecde0c6108ad8fdb91723af14fcb029bc961a897fde7dbd00366a32824cfe4925443c471c11
+MISC ChangeLog 5129 SHA256 8abf04e81f691b96a0989c11529b5d91723074fdc2bcc134cdd765c6e6e9903b SHA512 029b2b0ddc095d7f2cf737699e18f662d5ecd9d626f25bcf97764cfaf7f9221d7974554506e3dbfa3ba6c6f0e008e04193bdfbf4293786d3282fee2039c5f390 WHIRLPOOL 2728c4d335ab82e05dfa9e75a16e98518261c873d4dc6638abb6761e2847d3370c6171b0ff80b1f51ca6cfbcc0b0853f27dc68be307d962132f8af6e58fa9795
 MISC metadata.xml 156 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba SHA512 c15813e9ecae01488222d09140617eaf0e6e9b9b9d40412e1cda7838e64c8fb8c73c030dc90d723aea571acadddb76941c9a620fc4e554ba052ace1cc6b0ef79 WHIRLPOOL 1b1513674a388e3e95e09cfd70996bc98fc058ca0e0e7c5dc63e0b3389bedeb4dc16b55245b92a8ded7390cca0dc481e418f236a236ded9afcc2ef3845b25130
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iQIcBAEBCAAGBQJVTHRVAAoJELp701BxlEWfoY4P/09lxm8cEytzpm5uDlIBWrTk
-GY5XzdNZXuGt8AKczOkJk9uQlwSUovWHeOj0mnQDWROWDzGjn/iKatbI+2hqXlkU
-8EwZEBKrX8pdsfXLcB77CZ1CK6nEmO1m36QTXUR02pfHFNzdXxgOjkipPzOzvZ2w
-i4wKc+hIkV7NYdn8VKQrjSb/PhblENQG37i/2IADMHgdySNvXpK+ajYzbV5+YGoU
-qdtnqLCnFGfNTsdb5sIFsZtJsaW+p9/3v3XiIPVkGJ+1R6V/xFe3C+ZBeSfObSQN
-1r8N+k3DUHuSXZH8+u9bVMbHi/FT/DKLfx6dnzGeX94ACimMYk63RFfbA2SrXOLr
-elDXqQHfF4IcYkKmnRMH+YWsPAiZ1IPCsmYwN6WjXN1SkpXlcqme7XIteDLN6MW6
-0aOCfpdktIn8WrcfVKxeBGjpJ3eJSOi2bBQziY7WrmUpmqiKRsEaJoLYec55Z6OF
-1LWPmOzs5dK7dDXRVY8lyv9/P62BK1DuGEO/eRaqbcdFFF9ZfcaWks/e4K02Ek9F
-3JQHFNpRQdt5kBX+R6ojpzFYudhzvtnZBl45G5GMkoafo5hbYpMS4nfcxBHPgWYC
-Q1vna5+7mpxstA2KlGyFe7Fl69uiBTRmzM+5LseWujFIHU1lb0OhmgtfODsb3c5z
-voJSGvhDXqMzZ1tbAeIf
-=jBYx
+iQJ8BAEBCABmBQJVTK8iXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2NkMyRTQ0RUQ5MEUzMjc1OEU3RDU1QzBE
+MUY3ODFFRkY5RjRBM0I2AAoJENH3ge/59KO28esP/3rgJD+7MBjQFWi3vQP1Oisb
+mtLuUcfnD99YAore5cq5lUOrFya9yUHUTGFvaFLT5r5WP7KXaXCiQhN7vFJ8lk9o
+HxI3Nma83i6mn1imuvdaMruODTP4Ft5dIvy5QosqRt96hYzYiap6akkMfW/Y+jrh
+pAIDJW81x3xcZNEcwAGqXsxmx0xW6U12WeL7v2e92YTPECeohOchGxzexYqjeRCL
+t6sk73gZLMisCwsj4dcKtfyO0VCvFLRsoy3JPc5Wz0apV326b96AiqujLY6jlryV
+NJbbzlACejhKrpfpv2TrYN58ENUvnV4YC9H9bRFRrhnc74WksPMppJX0R8K1rhcs
+1D6DZEmdT+AATpvo1QqiF4cWJUeYf3OCf7qFAHsK4aUziAYaF2MbgA9lS/cFdmpU
+wPm9qgV26iEtNlZDMCbrbXY9kb9iHvyS9N0JI1juKO2XANLudll+nVXOa6y6j23f
+e+gXt33RvGjcuHf1OF8b4aUP0ZO1qS3hQCv5CaungWm6nMXobM7xwVlHC3bHmlg7
+VwPyULItv2AcSIfYL7Zea5CFH4BsTtatB9c2lYAEYzdj6OKN7yHJYGRfFDRwv2eH
+dDJagZPrgq0krGbP54sRZStlfI9/HE+qnl1Q+k1k474Jpic9puvCzfV6tWG/DzBr
+JFSvzJS5QM689rjrjQgy
+=qZaX
 -----END PGP SIGNATURE-----
