@@ -2,26 +2,26 @@
 Hash: SHA256
 
 AUX PEAR-Spreadsheet_Excel_Writer-0.9.1-utf8.patch 8017 SHA256 358bbe62957f4fcae77be46986777e8543c4c13060b69de7bc50fdcd979367da SHA512 70fe3ac9179d843fd41cb67432b78f932b41e4f455e756cbda07d71020444b34feee9433b52b4a0b08bd8ff69d40f2dd84746aab6a170320743a555f13a5f1de WHIRLPOOL 387469b4c51735dc649bfad5096d8e8000e715a1a3ce22df48bda4bf1e928d751281127ed88b1ff4a3634396740a3555b57b387fe99ed78cd41040a9af17dd64
-DIST Spreadsheet_Excel_Writer-0.9.2.tgz 57629 SHA256 2e10ee3b0b4f4b150e0bc31a705d4f85acb9bf4d76a780e44fbbfa812dc57dfd SHA512 f6ffd1d0497585473fcc3c5c6d1671cf6011d3f345fc80e6f3fdaa1d9ce5da85f03bd972347d04f3749f2ebcf464d9b125d2ae7e055fe43b5a319dbf47bfaed8 WHIRLPOOL 186a089d7eedbb2225e3c98370e90ff8b06bbafc6913dfd422802b3e39d08adb2ab3f9ef0f4ae9b2cd07928a26eae1bb09b92e1782b70ea2d08a8aaff99e651b
 DIST Spreadsheet_Excel_Writer-0.9.3.tgz 57258 SHA256 b708b9f594f358996a9d7ad32fa15fa5e6a12359f097e2bfa28a1ed50b4532f7 SHA512 6337fe5e7f75e00c5698df1d530684ab8756f1865c98ce9708035fa45eb64943d433dd6d8906a7146417f733053e3702094aa94a70343f990574425882a490e4 WHIRLPOOL 4fe7347d1806350d9c3eadc44590ec5112d790067410fbe431c7c82febcb274121117e0a997702617d6eb94ec9df013d5c7971bdb3a0fb7ea920d62814e0d792
-EBUILD PEAR-Spreadsheet_Excel_Writer-0.9.2.ebuild 489 SHA256 537933f6ee9dcd5d2afa42337e1b23bbd0f956496d528974d816c5685a85e75e SHA512 07aab8b2871f803dbda9f62e9b053d63033a751eee6c76ece6fb6b49f47e6dc8a67be063fe4e4bcd12aa51259853c1a1c97222da356b5b5b8d18aca66da7dab8 WHIRLPOOL 72f7004cfeb74cfcdfbd93bed3d9bfc2a794a64e7af3999132e4166bcd0f93fcdaad18e11ad9b6fb4eeb11250802c473f2b991073e0fd4ce3e0a4f87a4073898
 EBUILD PEAR-Spreadsheet_Excel_Writer-0.9.3.ebuild 505 SHA256 ac6cebe477bcc5ec5afb7bef629e9e4a61f35f1da4e644b862e986540edf49fa SHA512 c21dfcc0790bffc78948876a078e698c2025b3b021d6df0d0b6569e08434748477133108c86230fe7a4eaea26a286b34ff7e5be0276b94c43f6a181c1f1b550d WHIRLPOOL 8beaa9657bdd8477aab2fa0fbfc45cde281ff38e4f555729bb833592ffa7ebb00df456b32d90e46389313d7a9214f5d95db13f256ecd6d0c4631a64dc1e9738b
-MISC ChangeLog 9346 SHA256 779cf35e4199d5cb6b67cf2079f4cea91dfa4bb99d925cd3a17c3237b63a062d SHA512 64955a10652bda70a125f689a27a351c6e30838a7382d21040fbcb19c388e2ff58e9bfa25667be17250a46784abe55af6c9d38cf6324e042cea836f6222fb617 WHIRLPOOL 60445b6822c5e55ff051d80f916aef9552c27d07d3ca660fd46216acb68465d777049c53a88570032fba002d5a1c4064f9b2b4f8f0a7847162d05b161747f914
+MISC ChangeLog 9459 SHA256 973381d57327dafda3009dbda3614043953bfb935823890a88921a066901bb04 SHA512 dc55891493ee01c1a4ebfda3847273ce8c034c28e6d661a01eb5af40cd60998250d13e6315545b09c21361865778839c5e05f7ce633ada03c13c4a4d7dabf2ab WHIRLPOOL 8cce494dd1853fd9a3c79460c3a16309b4b1ff0c06462b0a50e53bb8b34d88332cc17e4f5b83c88b199aacde90bd3e7de66227953e88ce5e397ca58fc624f1fb
 MISC metadata.xml 156 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba SHA512 c15813e9ecae01488222d09140617eaf0e6e9b9b9d40412e1cda7838e64c8fb8c73c030dc90d723aea571acadddb76941c9a620fc4e554ba052ace1cc6b0ef79 WHIRLPOOL 1b1513674a388e3e95e09cfd70996bc98fc058ca0e0e7c5dc63e0b3389bedeb4dc16b55245b92a8ded7390cca0dc481e418f236a236ded9afcc2ef3845b25130
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iQIcBAEBCAAGBQJVTHQjAAoJELp701BxlEWffZEP+QF5fx51TyrtSyei5qgVTc77
-L+cVTFlulHP1Izlkz5KNJTDw4vy+JWDMQPKUrFhUK4kCo0U4JNOjczvzpwPRWIhe
-fhm0fhpO3xL961NGcduaq18MPKgwzXueREf69MJvFCZXIrrKYeYJfp3ZmEUr2iZw
-r/hjK+LM7ljt3X7P16S/AYGEDz37XsqKhYZG0S04NJSFaLMsWYy7OYXfu0ESapyZ
-q18OCpkr0HBQa7GQ6/+BSWDmO8qPVLUOq3vHJ8giBozbgEMt7HzO6H+MO8bDq/w5
-dyql8FBLmaiWrTvN7Q1C/R39fRRD9W0KticMiXeSbhzqk4r156I4hPKkWVYJHHgm
-PFaVxhtmjniMlQKozuLmavVrVB3ecteMEOhonDfPA/hiJ4VRezq889j7df5X0Nag
-+bbdp9MZBzJJQWWgrbqmUUi+ikexcvtB6COpMhu2yInvPSVCDVYTvcJBiGXrcBAu
-khEtizNMH73vYEO6iJUBjEXkTVDFlldcagMKgDdxjA1/PWbcQes9Cxj1alZGFiV+
-TTophpZq/6ToCotNgjv52cReWsorB/uR+Z8g17uHaWJtdebKC9ug9EULMiosq2I1
-ZOFUaZOaWHe0QUnHGd+gSGYHN3yDD48iCM71CHwx1TM5UbfuD1FINL8T9ncXrHmn
-3zT9WGMPjjbX3SUnEOgU
-=TCXf
+iQJ8BAEBCABmBQJVTK4IXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2NkMyRTQ0RUQ5MEUzMjc1OEU3RDU1QzBE
+MUY3ODFFRkY5RjRBM0I2AAoJENH3ge/59KO2jCIQANTdrr/6uF3pIDGpuUPvvAhT
+sx1H5UxpQVdvZWeFGa6XR88UYJ0aLprm6Qyas6LdocyncXBlmxz7LW/4L7fh09QN
+my6/1EgBPz7P73C453CJu7VOvDQ4YhROYRr5RIVazzCMq/F3FazbN1UXqOyRjb3r
+64uX4/AzEk4JQUHBkZVK9/XHHy68ZgP0FzHG9qKU5uzatX/hcMFy2C2XSlajrdqE
+XhYNKHOh4RucRlLoOQO+0mzAhMjPfZAmHWrOVWzHD+FO+b5dXfqeKP4A85mM1HS9
+3Hc6BYN5BA2Fh/LCnmRLsY+U5y6/l6vAPxGPmJcDAywyRQYeeDTc3IytBq0a6IVw
+cxkFkyDNfgsb/QslwIMgBHmZnmyzqttPXxqxTrFVGnlBugM7GtyyDGmkIH1Tfd2D
+4EpEFS9vMl5wrjPbV43JbnftrajDqJDZ2g4INJ+g8Bqocx+/MkTAdP5343bvGTcQ
+KCKAuGRkIwh3yqSF/L40mzcdYmnNm5c1BMFFoCggeYaFSV5zIZaEvE+sywMXHGDm
+epn3wVxmdSEawaPXqUabOnUpGXbmbofTAcSBM4S52pNpdt57/IJ5zG8LqNull8ss
+PLE8hTZvWbkun9vmO581qzH/q7hjmA2k5fC5JuhKyFwOJduA8xBy0loy1npk9zdB
+2u1rFxpIOCHQsoTMYreI
+=Y+zD
 -----END PGP SIGNATURE-----
