@@ -1,12 +1,0 @@
-# Copyright 1999-2014 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Spreadsheet_Excel_Writer/PEAR-Spreadsheet_Excel_Writer-0.9.2.ebuild,v 1.9 2014/01/26 18:39:58 olemarkus Exp $
-
-inherit php-pear-r1 eutils
-
-DESCRIPTION="Package for generating Excel spreadsheets"
-LICENSE="LGPL-2.1"
-SLOT="0"
-KEYWORDS="alpha amd64 arm hppa ia64 ppc ppc64 ~s390 ~sh sparc x86"
-RDEPEND=">=dev-php/PEAR-OLE-0.5-r1"
-IUSE=""
