@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/PEAR-Spreadsheet_Excel_Writer
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Spreadsheet_Excel_Writer/ChangeLog,v 1.65 2015/05/08 08:30:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Spreadsheet_Excel_Writer/ChangeLog,v 1.66 2015/05/08 12:36:40 grknight Exp $
+
+  08 May 2015; Brian Evans <grknight@gentoo.org>
+  -PEAR-Spreadsheet_Excel_Writer-0.9.2.ebuild:
+  Drop old
 
   08 May 2015; Agostino Sarubbo <ago@gentoo.org>
   PEAR-Spreadsheet_Excel_Writer-0.9.3.ebuild:
