@@ -1,6 +1,9 @@
 # ChangeLog for dev-php/PEAR-File_Find
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-File_Find/ChangeLog,v 1.39 2015/05/08 08:32:47 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-File_Find/ChangeLog,v 1.40 2015/05/08 12:49:27 grknight Exp $
+
+  08 May 2015; Brian Evans <grknight@gentoo.org> -PEAR-File_Find-1.3.0.ebuild:
+  Drop old
 
   08 May 2015; Agostino Sarubbo <ago@gentoo.org> PEAR-File_Find-1.3.2.ebuild:
   Stable for alpha/amd64/ia64/ppc/sparc/x86, wrt bug #548614
